--- a/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/ListadoPedidos.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ListadoPedidosController">
+<AnchorPane prefHeight="620.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.ListadoPedidosController">
    <children>
       <SplitPane dividerPositions="0.39914163090128757" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -24,8 +24,7 @@
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                      </columnResizePolicy>
                   </TableView>
-                  <Button layoutX="121.0" layoutY="562.0" mnemonicParsing="false" onAction="#handleNuevo" text="Nuevo" />
-                  <Button layoutX="359.0" layoutY="562.0" mnemonicParsing="false" text="Eliminar" />
+                  <Button layoutX="226.0" layoutY="553.0" mnemonicParsing="false" onAction="#handleNuevo" prefHeight="31.0" prefWidth="103.0" text="Nuevo" AnchorPane.bottomAnchor="10.0" />
                   <Label layoutX="20.0" layoutY="14.0" prefHeight="20.0" prefWidth="59.0" text="Sucursal">
                      <font>
                         <Font name="System Bold" size="14.0" />
@@ -69,13 +68,14 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <GridPane layoutX="14.0" layoutY="251.0" prefHeight="118.0" prefWidth="404.0">
+                  <GridPane layoutX="14.0" layoutY="251.0" prefHeight="138.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -83,12 +83,13 @@
                      <children>
                         <Label text="RUT" />
                         <TextField fx:id="rut" disable="true" GridPane.columnIndex="1" />
-                        <TextField fx:id="nombre" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="telefono" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label text="Nombre" GridPane.rowIndex="1" />
-                        <Label text="Telefono" GridPane.rowIndex="2" />
-                        <Label text="Direccion" GridPane.rowIndex="3" />
-                        <TextField fx:id="direccion" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <TextField fx:id="nombre" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <TextField fx:id="telefono" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Nombre" GridPane.rowIndex="2" />
+                        <Label text="Telefono" GridPane.rowIndex="3" />
+                        <Label text="Direccion" GridPane.rowIndex="4" />
+                        <TextField fx:id="direccion" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                        <Button mnemonicParsing="false" onAction="#handleBuscarCliente" text="Buscar Cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                   <Label layoutX="15.0" layoutY="14.0" text="Detalles pedido">
@@ -96,9 +97,8 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="202.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Despachar" />
-                  <Button layoutX="414.0" layoutY="533.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" />
-                  <GridPane layoutX="14.0" layoutY="410.0" prefHeight="81.0" prefWidth="404.0">
+                  <Button layoutX="526.0" layoutY="529.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" AnchorPane.bottomAnchor="38.0" />
+                  <GridPane layoutX="14.0" layoutY="436.0" prefHeight="81.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -117,7 +117,7 @@
                         <Label fx:id="montoEncomienda" text="\$" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                      </children>
                   </GridPane>
-                  <Button layoutX="225.0" layoutY="491.0" mnemonicParsing="false" onAction="#handleAgregarEncomienda" text="Agregar" />
+                  <Button layoutX="224.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleAgregarEncomienda" text="Agregar" />
                   <TableView fx:id="tabla_encomiendas" layoutX="451.0" layoutY="41.0" prefHeight="274.0" prefWidth="309.0">
                     <columns>
                       <TableColumn fx:id="id_encomiendaColumn" prefWidth="95.0" text="ID" />
@@ -134,7 +134,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="14.0" layoutY="383.0" text="Agregar Encomienda">
+                  <Label layoutX="14.0" layoutY="409.0" text="Agregar Encomienda">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -157,16 +157,14 @@
                     </rowConstraints>
                      <children>
                         <Label text="Medio de pago" GridPane.rowIndex="1" />
-                        <Label text="Monto recibido" GridPane.rowIndex="3" />
                         <Label text="Estado" GridPane.rowIndex="2" />
                         <ChoiceBox fx:id="medioPago" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                         <ChoiceBox fx:id="estadoPago" disable="true" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="montoRecibido" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="Monto" />
                         <Label fx:id="montoTotal" text="\$" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
-                  <Button layoutX="118.0" layoutY="491.0" mnemonicParsing="false" onAction="#handleGenerarPresupuesto" text="Presupuesto" />
+                  <Button layoutX="118.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGenerarPresupuesto" text="Presupuesto" />
                </children>
             </AnchorPane>
         </items>
