--- a/Entrega 4/Chilexplox/src/chilexplox/view/Mensaje.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Mensaje.fxml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<AnchorPane prefHeight="406.0" prefWidth="648.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+   <children>
+      <TextArea fx:id="mensaje" layoutX="29.0" layoutY="89.0" prefHeight="251.0" prefWidth="573.0" />
+      <Button layoutX="428.0" layoutY="44.0" mnemonicParsing="false" onAction="#Enviar" text="Enviar Mensaje" />
+      <Label layoutX="107.0" layoutY="22.0" text="Sucursal Destino" />
+      <ChoiceBox fx:id="destino" layoutX="51.0" layoutY="44.0" prefHeight="26.0" prefWidth="216.0" />
+   </children>
+</AnchorPane>
