--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Mensaje.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Mensaje.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="406.0" prefWidth="648.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+<AnchorPane prefHeight="406.0" prefWidth="648.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MensajeController">
    <children>
       <TextArea fx:id="mensaje" layoutX="29.0" layoutY="89.0" prefHeight="251.0" prefWidth="573.0" />
       <Button layoutX="428.0" layoutY="44.0" mnemonicParsing="false" onAction="#Enviar" text="Enviar Mensaje" />
