--- a/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/Menu.fxml
@@ -11,9 +11,11 @@
       <Button layoutX="118.0" layoutY="138.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
       <Label layoutX="14.0" layoutY="14.0" text="Bienvenido:" />
       <Label layoutX="30.0" layoutY="38.0" text="Sucursal:" />
-      <Button layoutX="117.0" layoutY="189.0" mnemonicParsing="false" onAction="#handleClientes" text="Clientes" />
+      <Button layoutX="116.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleClientes" text="Clientes" />
       <Label fx:id="nombre" layoutX="100.0" layoutY="14.0" text="Nombre" />
       <Label fx:id="sucursal" layoutX="100.0" layoutY="38.0" text="Sucursal" />
-      <Button layoutX="129.0" layoutY="243.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
+      <Button layoutX="127.0" layoutY="337.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
+      <Button layoutX="94.0" layoutY="235.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
+      <Button layoutX="84.0" layoutY="287.0" mnemonicParsing="false" text="Bandeja de Entrada" />
    </children>
 </AnchorPane>
