--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
@@ -31,6 +31,7 @@
                      </font>
                   </Label>
                   <Label fx:id="sucursal" layoutX="93.0" layoutY="16.0" text="sucursal" />
+                  <Button layoutX="425.0" layoutY="12.0" mnemonicParsing="false" onAction="#handleVolverMenu" text="Volver al Menu" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="611.0" prefWidth="729.0">
