--- a/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/Menu.fxml
@@ -8,14 +8,13 @@
 <AnchorPane prefHeight="400.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="chilexplox.view.MenuController">
    <children>
       <Label layoutX="80.0" layoutY="98.0" text="Seleccione una opción" />
-      <Button layoutX="118.0" layoutY="138.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
+      <Button fx:id="btnPedidos" disable="true" layoutX="116.0" layoutY="138.0" mnemonicParsing="false" onAction="#handlePedidos" text="Pedidos" />
       <Label layoutX="14.0" layoutY="14.0" text="Bienvenido:" />
       <Label layoutX="30.0" layoutY="38.0" text="Sucursal:" />
-      <Button layoutX="116.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleClientes" text="Clientes" />
       <Label fx:id="nombre" layoutX="100.0" layoutY="14.0" text="Nombre" />
       <Label fx:id="sucursal" layoutX="100.0" layoutY="38.0" text="Sucursal" />
       <Button layoutX="127.0" layoutY="337.0" mnemonicParsing="false" onAction="#handleSalir" text="Salir" />
-      <Button layoutX="94.0" layoutY="235.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
-      <Button layoutX="84.0" layoutY="287.0" mnemonicParsing="false" text="Bandeja de Entrada" />
+      <Button fx:id="btnEnviarMensaje" disable="true" layoutX="97.0" layoutY="235.0" mnemonicParsing="false" onAction="#handleMensaje" text="Enviar Mensaje" />
+      <Button fx:id="btnBandejaEntrada" disable="true" layoutX="84.0" layoutY="287.0" mnemonicParsing="false" text="Bandeja de Entrada" />
    </children>
 </AnchorPane>
