--- a/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
+++ b/Entrega 4/Chilexplox/bin/chilexplox/view/ListadoPedidos.fxml
@@ -99,29 +99,33 @@
                      </font>
                   </Label>
                   <Button layoutX="526.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGuardarCambios" prefHeight="51.0" prefWidth="164.0" text="Guardar Cambios" AnchorPane.bottomAnchor="38.0" />
-                  <GridPane layoutX="14.0" layoutY="436.0" prefHeight="81.0" prefWidth="404.0">
+                  <GridPane layoutX="14.0" layoutY="436.0" prefHeight="107.0" prefWidth="404.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Peso (gr)" />
-                        <Label text="Volumen (cc)" GridPane.rowIndex="1" />
-                        <TextField fx:id="peso" disable="true" GridPane.columnIndex="1" />
-                        <TextField fx:id="volumen" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label text="Monto calculado" GridPane.rowIndex="2" />
-                        <Label fx:id="montoEncomienda" text="\$" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Peso (gr)" GridPane.rowIndex="1" />
+                        <Label text="Volumen (cc)" GridPane.rowIndex="2" />
+                        <TextField fx:id="peso" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <TextField fx:id="volumen" disable="true" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Monto calculado" GridPane.rowIndex="3" />
+                        <Label fx:id="montoEncomienda" text="\$" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                        <Label text="Nombre" />
+                        <TextField fx:id="nombreEncomienda" disable="true" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
-                  <Button layoutX="224.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleAgregarEncomienda" text="Agregar" />
-                  <TableView fx:id="tabla_encomiendas" layoutX="451.0" layoutY="41.0" prefHeight="274.0" prefWidth="309.0">
+                  <Button layoutX="224.0" layoutY="555.0" mnemonicParsing="false" onAction="#handleAgregarEncomienda" text="Agregar" />
+                  <TableView fx:id="tabla_encomiendas" layoutX="451.0" layoutY="41.0" prefHeight="274.0" prefWidth="366.0">
                     <columns>
                       <TableColumn fx:id="id_encomiendaColumn" prefWidth="95.0" text="ID" />
+                        <TableColumn fx:id="nombreEncomiendaColumn" prefWidth="75.0" text="Nombre" />
                       <TableColumn fx:id="pesoColumn" prefWidth="93.0" text="Peso" />
                         <TableColumn fx:id="volumenColumn" prefWidth="88.0" text="Volumen" />
                         <TableColumn fx:id="precioColumn" prefWidth="75.0" text="Precio" />
@@ -165,7 +169,7 @@
                         <Label fx:id="montoTotal" text="\$" GridPane.columnIndex="1" />
                      </children>
                   </GridPane>
-                  <Button layoutX="118.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGenerarPresupuesto" text="Presupuesto" />
+                  <Button layoutX="118.0" layoutY="555.0" mnemonicParsing="false" onAction="#handleGenerarPresupuesto" text="Presupuesto" />
                </children>
             </AnchorPane>
         </items>
