--- a/Entrega 4/Chilexplox/src/chilexplox/view/BandejaEntrada.fxml
+++ b/Entrega 4/Chilexplox/src/chilexplox/view/BandejaEntrada.fxml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</AnchorPane>
 
+<AnchorPane prefHeight="306.0" prefWidth="560.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="chilexplox.view.BandejaEntradaController">
+   <children>
+      <TableView fx:id="tabla_mensajes" layoutX="14.0" layoutY="14.0" prefHeight="276.0" prefWidth="185.0">
+        <columns>
+          <TableColumn fx:id="emisarioColumn" prefWidth="86.0" text="De" />
+          <TableColumn fx:id="sucursalOrigenColumn" prefWidth="98.0" text="Sucursal" />
+        </columns>
+      </TableView>
+      <TextArea fx:id="mensaje" layoutX="214.0" layoutY="14.0" prefHeight="276.0" prefWidth="328.0" />
+   </children>
+</AnchorPane>
